--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "random-js": "^2.1.0"
   }
 }
