Draft logic for score tracker and other updates

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vite": "^7.0.0"
   },
   "dependencies": {
-    "@bponnaluri/places-js": "^0.0.7",
+    "@bponnaluri/places-js": "0.0.13",
     "random-js": "^2.1.0",
     "vite-plugin-handlebars": "^2.0.0"
   }
