--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "devDependencies": {
     "typescript": "~5.8.3",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-handlebars": "^2.0.0"
+
   },
   "dependencies": {
-    "@bponnaluri/places-js": "^0.0.21",
-    "random-js": "^2.1.0",
-    "vite-plugin-handlebars": "^2.0.0"
+    "random-js": "^2.1.0"
   }
 }
