--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-handlebars": "^2.0.0"
-
   },
   "dependencies": {
+    "@bponnaluri/places-js": "^0.0.22",
     "random-js": "^2.1.0"
   }
 }
